[project]
name = "agile-elec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Louis Maddox", email = "louismmx@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "polars-genson[polars]>=0.7.0",
]

[project.scripts]
agile-elec = "agile_elec:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pdbpp>=0.11.7",
]
